# navier_stokes_solver

./: .gitignore  CMakeLists.txt  README.md  mesh.msh  performance_analysis.ipynb  performance_log.csv  run_sim_steady.sh  run_sim_unsteady.sh  weak_scalability_log.csv
common/: cmake-common.cmake
lab-07/: CMakeLists.txt
lab-07/src/: NonLinearDiffusion.cpp  NonLinearDiffusion.hpp  lab-07-exercise1.cpp
lab-09/src/: Stokes.cpp  Stokes.hpp  lab-09.cpp
lab_new/: CMakeLists.txt
lab_new/lift_drag_data/: drag_coefficient_0.20.txt  lift_coefficient_0.20.txt
lab_new/mesh/: 2dMeshCylinder.msh  2dMeshFine.geo  2dMeshNormal.msh  2dMeshReallyCoarse.msh  new_mesh.msh
lab_new/src/: NSSolver.cpp  NSSolver.hpp  NSSolverStationary.cpp  NSSolverStationary.hpp  generate_mesh.py  test.cpp  testStationary.cpp
lab_true/: CMakeLists.txt
lab_true/mesh/: 2dMesh.msh  2dMeshCoarse.msh
lab_true/src/: NSSolver.cpp  NSSolver.hpp  NSSolverStationary.cpp  NSSolverStationary.hpp  test.cpp  testStationary.cpp
project/meshes/: 2dAirplane.msh  2dMesh.geo
project/src/: Stokes.cpp  Stokes.hpp  lab-09.cpp
prova_NSE_dealii/: CMakeLists.txt  step-57.cc
